Bug 334961 - "copy e-mail address" copies whole mailto link rather than just e-mail address
Summary: "copy e-mail address" copies whole mailto link rather than just e-mail address
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 1.3.3
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-17 21:23 UTC by Dominik George
Modified: 2014-05-27 12:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominik George 2014-05-17 21:23:38 UTC
Using the "copy e-mail address" context menu option on a mailto link
copies the complete mailto link rather than the e-mail address, as the
caption suggests.

E.g., using the menu item on something like

<a href="mailto:foo@example.com">…</a>

copies mailto:foo@example.com to the clipboard, making it unfit for
pasting into KMail or similar.

Reproducible: Always
Comment 1 Dominik George 2014-05-17 21:28:06 UTC
Tracked in Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=748505
Comment 2 Andrea Iacovitti 2014-05-18 13:28:44 UTC
Reproducible also using khtml as rendering engine.
Comment 3 Dawit Alemayehu 2014-05-18 15:10:30 UTC
(In reply to comment #2)
> Reproducible also using khtml as rendering engine.

I could not reproduce it when I switched to khtml (View Mode->KHTML).
Comment 4 Andrea Iacovitti 2014-05-18 16:54:48 UTC
(In reply to comment #3)
> I could not reproduce it when I switched to khtml (View Mode->KHTML).

Oh, you are right. I was mislead from what clipper shown in its history...
Sorry for the noise.
Comment 5 Dawit Alemayehu 2014-05-27 12:27:55 UTC
Git commit 4d9b3e743991abfe61f8bff1af5d120516914588 by Dawit Alemayehu.
Committed on 18/05/2014 at 07:10.
Pushed by adawit into branch '1.3'.

Copy only the email address and not the mailto link.
FIXED-IN: 1.3.4

M  +10   -0    src/kwebkitpart_ext.cpp
M  +1    -0    src/kwebkitpart_ext.h
M  +2    -2    src/webview.cpp

http://commits.kde.org/kwebkitpart/4d9b3e743991abfe61f8bff1af5d120516914588