Copy only the email address and not the mailto link.

BUG: 334961
FIXED-IN: 1.3.4